--- a/index.html
+++ b/index.html
@@ -1,36 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Outfit:wght@700&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Product preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    /* font-family: 'Montserrat', sans-serif;
+font-family: 'Outfit', sans-serif; */
+    /* font-family: 'Outfit', sans-serif; */
+    * {
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-size: 14px;
+      min-height: 100vh;
+      font-family: 'Montserrat', sans-serif;
+      --DarkCyan: hsl(158, 36%, 37%);
+      --borderRadius: 10px;
+      background-color: hsl(30, 38%, 92%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .card {
+      display: flex;
+      width: 500px;
+      background-color: white;
+      border-radius: var(--borderRadius);
+      margin: 0 auto;
+    }
+
+    .text {
+      padding: 20px 20px;
+    }
+
+    .text>h4 {
+      color: hsl(228, 12%, 48%);
+      padding: 0 0 20px 0px;
+    }
+
+    .text>h1 {
+      font-family: 'Fraunces', sans-serif;
+       padding: 0 0 20px 0px;
+    }
+
+    .text>p {
+      color: hsl(228, 12%, 48%);
+       padding: 0 0 20px 0px;
+    }
+    .price{
+      display: flex;
+      padding: 0 0 20px 0px;
+    }
+    .newPrice {
+      font-family: 'Fraunces', sans-serif;
+      font-size: 24px;
+      color: var(--DarkCyan);
+    }
+
+    .oldPrice {
+      text-decoration: line-through;
+      color: hsl(228, 12%, 48%);
+      padding:0 0 0 10px ;
+    }
+
+    .card img {
+      height: 400px;
+      border-radius: var(--borderRadius) 0px 0px var(--borderRadius);
+    }
+
+
+    .btn {
+      margin: 0px;
+      border: 0px;
+      border-radius: 4px;
+      height: 35px;
+      width: 100%;
+      background-color: var(--DarkCyan);
+      font-family: 'Montserrat', sans-serif;
+      color: white;
+    }
   </style>
 </head>
+
 <body>
-
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container">
+    <div class="card">
+      <img src="images/image-product-desktop.jpg" alt="">
+      <div class="text">
+        <h4>PERFUM</h4>
+        <h1>Gabrielle Essence Eau De Parfum</h1>
+        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge,
+          Perfumer-Creator for the House of CHANEL.</p>
+        <div class="price">
+          <p class="newPrice">$149.99</p>
+          <p class="oldPrice">$169.99</p>
+        </div>
+        <button class="btn" type="button" value="Add to Cart">
+          <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z"
+              fill="#FFF" />
+          </svg>
+          Add to Cart
+        </button>
+      </div>
+    </div>
   </div>
 </body>
+
 </html>
